--- a/src/about.html
+++ b/src/about.html
@@ -17,7 +17,7 @@
         class="group flex *:text-white gap-5 *:hover:text-[#1dbf73] *:text-[14px] *:hover:transition-all"
       >
         <li><a href="./index.html">HOME</a></li>
-        <li><a href=".">ABOUT</a></li>
+        <li><a href="./about.html">ABOUT</a></li>
         <li><a href="./services.html">SERVICES</a></li>
         <li><a href="./portfolio.html">PORTFOLIO</a></li>
         <li><a href="./price.html">PRICE</a></li>
