--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         class="group flex *:text-white gap-5 *:hover:text-[#1dbf73] *:text-[14px] *:hover:transition-all"
       >
         <li><a href="./index.html">HOME</a></li>
-        <li><a href="./about.html">ABOUT</a></li>
-        <li><a href="./services.html">SERVICES</a></li>
+        <li><a href="src/about.html">ABOUT</a></li>
+        <li><a href="src/services.html">SERVICES</a></li>
         <li><a href="./portfolio.html">PORTFOLIO</a></li>
         <li><a href="./price.html">PRICE</a></li>
         <li class="flex gap-2 items-center relative">
